--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <main>
         Main
         <img
-          src="Images/Hamburguesa-5.png"
+          src="Images/churrascoTexto.png"
           alt="Hamburguesa"
           width="600"
           height="500"
