--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </ul>
     </nav>
     <main>
-      <h1 style="color: black">Main</h1>
+      <!--<h1 style="color: black">Main</h1>-->
       <img src="Images/aros.jpg" alt="Hamburguesa" width="600" height="400" />
     </main>
     <div id="sidebar">
@@ -31,7 +31,6 @@
         <h1 id="navH1">CARTA RUVSTER</h1>
       </nav>
       <main>
-        Main
         <img
           src="Images/churrascoTexto.png"
           alt="Hamburguesa"
