--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="Images/aros.jpg" alt="Hamburguesa" width="600" height="400" />
     </main>
     <div id="sidebar">
-      <h1>PA</h1>
+      <h1>JORGE</h1>
       <h2>SANDWICH</h2>
       <h2>POLLOS</h2>
       <h2>PAPAS FRITAS</h2>
@@ -32,7 +32,7 @@
       </nav>
       <main>
         <img
-          src="Images/churrascoTexto.png"
+          src="Images/vienesaTexto.png"
           alt="Hamburguesa"
           width="600"
           height="500"
