--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="container">
+  <body>
     <nav class="nav">
       <h1 id="navH1">CARTA ROUSTER</h1>
       <ul>
@@ -15,60 +15,23 @@
         <li>Home</li>
       </ul>
     </nav>
-    <main>
-      <!--<h1 style="color: black">Main</h1>-->
-      <img src="Images/aros.jpg" alt="Hamburguesa" width="600" height="400" />
-    </main>
-    <div id="sidebar">
-      <h1>JORGE</h1>
-      <h2>SANDWICH</h2>
-      <h2>POLLOS</h2>
-      <h2>PAPAS FRITAS</h2>
-      <h2>JUGOS NATURALES</h2>
-  <body>
-    <div class="container">
-      <nav>
-        <h1 id="navH1">CARTA RUVSTER</h1>
-      </nav>
-      <main>
-        <img
+        <!--<img src="Images/aros.jpg" alt="Hamburguesa" width="600" height="400" />--> 
+        <!--<img
           src="Images/vienesaTexto.png"
           alt="Hamburguesa"
           width="600"
           height="500"
-        />
-      </main>
-      <div id="sidebar">
-        PAULA
-        <h2>SANDWICH</h2>
-        <h2>POLLOS</h2>
-        <h2>PAPAS FRITAS</h2>
-        <h2>JUGOS NATURALES</h2>
-      </div>
-      <div id="content1">JORGE</div>
-      <div id="content2">SOFIA</div>
-      <div id="content3">MARTIN</div>
-      <div id="content4">
-        FAMILIA
-        <p>
-	Hola Rouster
-        </p>
-      </div>
-      <footer>PAPA</footer>
-
-    </div>
-    <div id="content1">JORGE</div>
-    <div id="content2">SOFIA</div>
-    <div id="content3">MARTIN</div>
-    <div id="content4">
-      FAMILIA
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non est
-        laudantium quos, voluptatum laborum molestiae eveniet dolores ex illum
-        sit, incidunt odio aliquam, repellendus omnis sapiente atque quia
-        repudiandae similique.20
-      </p>
-    </div>
-    <footer>PAPA</footer>
+        />-->
+    <div class="container">    
+        </div>
+        <div class="content1">JORGE</div>
+        <div class="content2">SOFIA</div>
+        <div class="content3">MARTIN</div>
+        <div class="content4">FAMILIA
+          <p>
+            Lorem ipsum dolor site dolores ex
+          </p>
+      <footer class="footer">SALUDOS</footer>  
+    </div>      
   </body>
 </html>
