--- a/index.html
+++ b/index.html
@@ -19,19 +19,70 @@
         <!--<img
           src="Images/vienesaTexto.png"
           alt="Hamburguesa"
-          width="600"
-          height="500"
+          width="200"
+          height="200"
         />-->
     <div class="container">    
-        </div>
         <div class="content1">JORGE</div>
-        <div class="content2">SOFIA</div>
-        <div class="content3">MARTIN</div>
-        <div class="content4">FAMILIA
-          <p>
-            Lorem ipsum dolor site dolores ex
-          </p>
-      <footer class="footer">SALUDOS</footer>  
-    </div>      
+        <div class="content2">PAULA</div>
+        <div class="content3">JORGE</div>
+        <div class="content4">SOFIA</div>
+        <div class="content5">MARTIN</div>
+        <div class="content6">FAMILIA</div>
+    </div>
+    <div class="container-2">    
+        <div id="jorge" class="content1">
+          <img
+          src="Images/churrascoTexto.png"
+          alt="Hamburguesa"
+          width="200"
+          height="200"
+        />
+        </div>
+        <div id="paula" class="content2">
+          <img
+          src="Images/hamburguesaTexto.png"
+          alt="Hamburguesa"
+          width="200"
+          height="200">
+        </div>
+        <div id="jorge" class="content3">
+          <img
+          src="Images/vienesaTexto.png"
+          alt="Hamburguesa"
+          width="200"
+          height="200">
+        </div>
+        <div id="sofia" class="content4">
+          <img
+          src="Images/selladitosTexto.png"
+          alt="Hamburguesa"
+          width="200"
+          height="200">
+        </div>
+        <div id="martin" class="content5">
+          <img
+          src="Images/ensaladasTexto.png"
+          alt="Hamburguesa"
+          width="200"
+          height="200">
+        </div>
+        <div class="content6">
+          <img
+          src="Images/papasFritasTexto.png"
+          alt="Hamburguesa"
+          width="200"
+          height="200">
+        </div>
+    </div>
+    <div>-</div>
+    <div class="container-3">    
+        <div class="content1">JORGE</div>
+        <div class="content2">PAULA</div>
+        <div class="content3">JORGE</div>
+        <div class="content4">SOFIA</div>
+        <div class="content5">MARTIN</div>
+        <div class="content6">FAMILIA</div>
+    <!--<footer class="footer">SALUDOS</footer>-->   
   </body>
 </html>
