5to-commit cada ves mejor

--- a/index.html
+++ b/index.html
@@ -9,29 +9,21 @@
   </head>
   <body>
     <nav class="nav">
-      <h1 id="navH1">CARTA ROUSTER</h1>
-      <ul>
-        <li>back</li>
-        <li>Home</li>
-      </ul>
+      <img
+          src="Images/logoRouster.png"
+          alt="logoRouster">
+      
     </nav>
-        <!--<img src="Images/aros.jpg" alt="Hamburguesa" width="600" height="400" />--> 
-        <!--<img
-          src="Images/vienesaTexto.png"
-          alt="Hamburguesa"
-          width="200"
-          height="200"
-        />-->
     <div class="container">    
-        <div class="content1">JORGE</div>
-        <div class="content2">PAULA</div>
-        <div class="content3">JORGE</div>
-        <div class="content4">SOFIA</div>
-        <div class="content5">MARTIN</div>
-        <div class="content6">FAMILIA</div>
+        <div class="content">JORGE</div>
+        <div class="content">PAULA</div>
+        <div class="content">JORGE</div>
+        <div class="content">SOFIA</div>
+        <div class="content">MARTIN</div>
+        <div class="content">FAMILIA</div>
     </div>
-    <div class="container-2">    
-        <div id="jorge" class="content1">
+    <main class="container-2">    
+        <div id="jorge" class="content">
           <img
           src="Images/churrascoTexto.png"
           alt="Hamburguesa"
@@ -39,50 +31,51 @@
           height="200"
         />
         </div>
-        <div id="paula" class="content2">
+        <div id="paula" class="content">
           <img
           src="Images/hamburguesaTexto.png"
           alt="Hamburguesa"
           width="200"
           height="200">
         </div>
-        <div id="jorge" class="content3">
+        <div id="jorge-2" class="content">
           <img
           src="Images/vienesaTexto.png"
           alt="Hamburguesa"
           width="200"
           height="200">
         </div>
-        <div id="sofia" class="content4">
+        <div id="sofia" class="content">
           <img
           src="Images/selladitosTexto.png"
           alt="Hamburguesa"
           width="200"
           height="200">
         </div>
-        <div id="martin" class="content5">
+        <div id="martin" class="content">
           <img
           src="Images/ensaladasTexto.png"
           alt="Hamburguesa"
           width="200"
           height="200">
         </div>
-        <div class="content6">
+        <div id="familia" class="content">
           <img
           src="Images/papasFritasTexto.png"
           alt="Hamburguesa"
           width="200"
           height="200">
         </div>
+      </main>
     </div>
     <div>-</div>
-    <div class="container-3">    
-        <div class="content1">JORGE</div>
-        <div class="content2">PAULA</div>
-        <div class="content3">JORGE</div>
-        <div class="content4">SOFIA</div>
-        <div class="content5">MARTIN</div>
-        <div class="content6">FAMILIA</div>
+    <div class="container">    
+        <div class="content">JORGE</div>
+        <div class="content">PAULA</div>
+        <div class="content">JORGE</div>
+        <div class="content">SOFIA</div>
+        <div class="content">MARTIN</div>
+        <div class="content">FAMILIA</div>
     <!--<footer class="footer">SALUDOS</footer>-->   
   </body>
 </html>
