--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
           width="200"
           height="200">
         </div>
+        <div id="martin" class="content">
+          <img
+          src="Images/empanadasTexto.png"
+          alt="Hamburguesa"
+          width="200"
+          height="200">
+        </div>
+        <div id="familia" class="content">
+          <img
+          src="Images/paraBeberTexto.png"
+          alt="Hamburguesa"
+          width="200"
+          height="200">
+        </div>
       </main>
     </div>
     <div>-</div>
