8bo-commit probando github

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       
     </nav>
     <div class="container">    
-        <div class="content">JORGE</div>
+        <div class="content"></div>
         <div class="content">PAULA</div>
         <div class="content">JORGE</div>
         <div class="content">SOFIA</div>
