2bo/commit going back to main and merge

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="content">MARTIN</div>
         <div class="content">FAMILIA</div>
     </div>
-    <main class="container-2">    
+    <main class="main">    
         <div id="jorge" class="content">
           <img
           src="Images/churrascoTexto.png"
