13bo-commit ajustes en dir

--- a/grid-start/index.html
+++ b/grid-start/index.html
@@ -25,56 +25,56 @@
     <main class="main">    
         <div id="jorge" class="content">
           <img
-          src="Images/churrascoTexto.png"
+          src="Images/churrascoTexto100x100.png"
           alt="Hamburguesa"
           
         />
         </div>
         <div id="paula" class="content">
           <img
-          src="Images/hamburguesaTexto.png"
+          src="Images/hamburguesaTexto100x100.png"
           alt="Hamburguesa"
           width="200"
           height="200">
         </div>
         <div id="jorge-2" class="content">
           <img
-          src="Images/vienesaTexto.png"
+          src="Images/vienesaTexto100x100.png"
           alt="Hamburguesa"
           width="200"
           height="200">
         </div>
         <div id="sofia" class="content">
           <img
-          src="Images/selladitosTexto.png"
+          src="Images/selladitosTexto100x100.png"
           alt="Hamburguesa"
           width="200"
           height="200">
         </div>
         <div id="martin" class="content">
           <img
-          src="Images/ensaladasTexto.png"
+          src="Images/ensalsadasTexto100x100.png"
           alt="Hamburguesa"
           width="200"
           height="200">
         </div>
         <div id="familia" class="content">
           <img
-          src="Images/papasFritasTexto.png"
+          src="Images/papasFritasTexto100x100.png"
           alt="Hamburguesa"
           width="200"
           height="200">
         </div>
         <div id="martin" class="content">
           <img
-          src="Images/empanadasTexto.png"
+          src="Images/empanadasTexto100x100.png"
           alt="Hamburguesa"
           width="200"
           height="200">
         </div>
         <div id="familia" class="content">
           <img
-          src="Images/paraBeberTexto.png"
+          src="Images/paraBeberTexto100x100.png"
           alt="Hamburguesa"
           width="200"
           height="200">
