14bo-commit  grid-example

--- a/grid-example/index.html
+++ b/grid-example/index.html
@@ -4,17 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="basic.css"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="basic.css" />
 </head>
 <body>
+    <main class="main">
     <div class="container">
-        <div id="1">1</div>
-        <div id="2">2</div>
-        <div id="3">3</div>
-        <div id="4">4</div>
-        <div id="5">5</div>
-        <div id="6">6</div>
+        <div id="i1" class="i1">1</div>
+        <div id="i2" class="item2">2</div>
+        <div id="i3" class="item3">3</div>
+        <div id="i4" class="item4">4</div>
+        <div id="i5" class="item5">5</div>
+        <div id="i6" class="item6">6</div>
     </div>
+    <div class="container-2">
+        <div id="i1" class="item1">1</div>
+        <div id="i2" class="item2">2</div>
+        <div id="i3" class="item3">3</div>
+        <div id="i4" class="item4">4</div>
+        <div id="i5" class="item5">5</div>
+        <div id="i6" class="item6">6</div>
+    </div>
+    <div class="container">
+        <div id="i1" class="item1">1</div>
+        <div id="i2" class="item2">2</div>
+        <div id="i3" class="item3">3</div>
+        <div id="i4" class="item4">4</div>
+        <div id="i5" class="item5">5</div>
+        <div id="i6" class="item6">6</div>
+    </div>
+    <div class="container-2">
+        <div id="i1" class="item1">1</div>
+        <div id="i2" class="item2">2</div>
+        <div id="i3" class="item3">3</div>
+        <div id="i4" class="item4">4</div>
+        <div id="i5" class="item5">5</div>
+        <div id="i6" class="item6">6</div>
+    </div>
+    </main>
 </body>
 </html>
