--- a/grid-example/index.html
+++ b/grid-example/index.html
@@ -10,7 +10,7 @@
 <body>
     <main class="main">
     <div class="container">
-        <div id="i1" class="i1">1</div>
+        <div id="i1" class="item1">1</div>
         <div id="i2" class="item2">2</div>
         <div id="i3" class="item3">3</div>
         <div id="i4" class="item4">4</div>
