1er-commit second-branch

--- a/grid-example-2/index.html
+++ b/grid-example-2/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="basic.css" />
 </head>
 <body>
-    <div class="container">
-        <div id="i1" class="item1">
+    <header>
+        <div class="header">
             <img src="images/logoRouster.png"
                  alt="logoRouster">
         </div>
+    </header>
+    <div class="container">
         <div id="i2" class="item2">
             <img src="images/churrascoTexto.png"
                  alt="logoRouster">
