--- a/grid-example-2/index.html
+++ b/grid-example-2/index.html
@@ -14,31 +14,37 @@
                  alt="logoRouster">
         </div>
     </header>
-    <div class="container">
-        <div id="i2" class="item2">
+    <nav class="nav">
+        1
+    </nav>
+    <main class="main">
+        <div id="i1" class="item1">
             <img src="images/churrascoTexto.png"
                  alt="logoRouster">
             <img src="images/hamburguesaTexto.png"
                  alt="logoRouster">
         </div>
-        <div id="i3" class="item3">
+        <div id="i2" class="item2">
             <img src="images/vienesaTexto.png"
                  alt="logoRouster">
             <img src="images/selladitosTexto.png"
                  alt="logoRouster">
         </div>
-        <div id="i4" class="item4">
+        <div id="i3" class="item3">
             <img src="images/ensaladasTexto.png"
                  alt="logoRouster">
             <img src="images/papasFritasTexto.png"
                  alt="logoRouster">
         </div>
-        <div id="i5" class="item5">
+        <div id="i4" class="item4">
             <img src="images/hamburguesaTexto.png"
                  alt="logoRouster">
             <img src="images/paraBeberTexto.png"
                  alt="logoRouster">
         </div>
-    </div>
+    </main>
+    <footer class="footer">
+        1
+    </footer>
 </body>
 </html>
