--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
     <nav class="nav">
         1
     </nav>
+<!--en el container main encuentro todas las imagenes/boton de la pagina-->
     <main class="main">
         <div id="i1" class="item1">
-            <img src="images/churrascoTexto.png"
-                 alt="logoRouster">
-            <img src="images/hamburguesaTexto.png"
-                 alt="logoRouster">
+            <a href="./churrascos.html">
+                <img src="images/churrascoTexto.png"
+                     alt="logoRouster">
+            </a>
+            <a href="./churrascos.html">
+                <img src="images/hamburguesaTexto.png"
+                     alt="logoRouster">
+            </a>
         </div>
         <div id="i2" class="item2">
             <img src="images/vienesaTexto.png"
