agregando hamburguesa.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img src="images/churrascoTexto.png"
                      alt="logoRouster">
             </a>
-            <a href="./churrascos.html">
+            <a href="/html/hamburguesa.html">
                 <img src="images/hamburguesaTexto.png"
                      alt="logoRouster">
             </a>
