agregando pagina de hamburguesa

--- a/html/hamburguesa.html
+++ b/html/hamburguesa.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="basic.css" />
 </head>
 <body>
-    <a href="../index.html">Home</a>
+    <header>
+        <div class="header">
+            <img src="images/logoRouster.png"
+                 alt="logoRouster">
+        </div>
+    </header>
+    <nav class="nav">
+        <h1 class="h1">HAMBURGESA</h1>
+        <a href=../index.html>
+    </nav>
+<!--en el container main encuentro todas las imagenes/boton de la pagina-->
+    <main class="main">
+
+    </main>
+    <footer class="footer">
+        1
+    </footer>
 </body>
 </html>
