--- a/html/hamburguesa.html
+++ b/html/hamburguesa.html
@@ -16,11 +16,11 @@
     </header>
     <nav class="nav">
         <h1 class="h1">HAMBURGESA</h1>
-        <a href=../index.html>
+        
     </nav>
 <!--en el container main encuentro todas las imagenes/boton de la pagina-->
     <main class="main">
-
+	<a href="../index.html">
     </main>
     <footer class="footer">
         1
