conectando hamburguesa con index

--- a/html/hamburguesa.html
+++ b/html/hamburguesa.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header">
-            <img src="images/logoRouster.png"
+            <img src="../images/logoRouster.png"
                  alt="logoRouster">
         </div>
     </header>
