--- a/html/hamburguesa.html
+++ b/html/hamburguesa.html
@@ -15,12 +15,14 @@
         </div>
     </header>
     <nav class="nav">
-        <h1 class="h1">HAMBURGESA</h1>
+        
         
     </nav>
 <!--en el container main encuentro todas las imagenes/boton de la pagina-->
     <main class="main">
 	<a href="../index.html">
+	<h1 class="h1">HOME</h1>
+	</a>
     </main>
     <footer class="footer">
         1
