--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
     <main class="main">
         <div id="i1" class="item1">
             <a href="./churrascos.html">
-                <img src="images/churrascoTexto.png"
-                     alt="logoRouster">
+                <img src="images/churrascoTexto100x100.png"
+                     alt="Churrasco Texto">
             </a>
             <a href="./html/hamburguesa.html">
-                <img src="images/hamburguesaTexto.png"
-                     alt="logoRouster">
+                <img src="images/hamburguesaTexto100x100.png"
+                     alt="Hamburgiesa Texto">
             </a>
         </div>
         <div id="i2" class="item2">
-            <img src="images/vienesaTexto.png"
-                 alt="logoRouster">
-            <img src="images/selladitosTexto.png"
-                 alt="logoRouster">
+            <img src="images/vienesaTexto100x100.png"
+                 alt="Vienesa Texto">
+            <img src="images/selladitosTexto100x100.png"
+                 alt="Selladito Texto">
         </div>
         <div id="i3" class="item3">
-            <img src="images/ensaladasTexto.png"
-                 alt="logoRouster">
-            <img src="images/papasFritasTexto.png"
-                 alt="logoRouster">
+            <img src="images/ensaladasTexto100x100.png"
+                 alt="Enslada Texto">
+            <img src="images/papasFritasTexto100x100.png"
+                 alt="Papas Fritas Texto">
         </div>
         <div id="i4" class="item4">
-            <img src="images/hamburguesaTexto.png"
-                 alt="logoRouster">
-            <img src="images/paraBeberTexto.png"
-                 alt="logoRouster">
+            <img src="images/empanadaTexto100x100.png"
+                 alt="Empanada Texto">
+            <img src="images/paraBeberTexto100x100.png"
+                 alt="Para Beber">
         </div>
     </main>
     <footer class="footer">
