agregue texto al footer corregi unos href

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!--en el container main encuentro todas las imagenes/boton de la pagina-->
     <main class="main">
         <div id="i1" class="item1">
-            <a href="./churrascos.html">
+            <a href="./html/churrasco.html">
                 <img src="images/churrascoTexto100x100.png"
                      alt="Churrasco Texto">
             </a>
@@ -36,7 +36,7 @@
                  alt="Selladito Texto">
         </div>
         <div id="i3" class="item3">
-            <img src="images/ensaladasTexto100x100.png"
+            <img src="images/ensaladaTexto100x100.png"
                  alt="Enslada Texto">
             <img src="images/papasFritasTexto100x100.png"
                  alt="Papas Fritas Texto">
