--- a/html/hamburguesa.html
+++ b/html/hamburguesa.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="basic.css" />
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="header">
-            <img src="../images/logoRouster.png"
-                 alt="logoRouster">
-        </div>
+      <div class="header">
+        <img src="../images/logoRouster.png" alt="logoRouster" />
+      </div>
     </header>
     <nav class="nav">
-        <h1 class="h1">HAMBURGESA</h1>
-        
+      <h1 class="h1">HAMBURGUESA</h1>
     </nav>
-<!--en el container main encuentro todas las imagenes/boton de la pagina-->
+    <!--en el container main encuentro todas las imagenes/boton de la pagina-->
     <main class="main">
-	<a href="../index.html">
+      <a href="../index.html">HOME</a>
     </main>
-    <footer class="footer">
-        1
-    </footer>
-</body>
+    <footer class="footer">1</footer>
+  </body>
 </html>
