--- a/html/hamburguesa.html
+++ b/html/hamburguesa.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CHURRASCO</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="basic.css" />
-  </head>
-  <body>
+</head>
+<body>
     <header>
-      <div class="header">
-        <img src="../images/logoRouster.png" alt="logoRouster" />
-      </div>
+        <div class="header">
+            <img src="../images/logoRouster.png"
+                 alt="logoRouster">
+        </div>
     </header>
     <nav class="nav">
-      <h1 class="h1">HAMBURGUESA</h1>
         
         
     </nav>
-    <!--en el container main encuentro todas las imagenes/boton de la pagina-->
+<!--en el container main encuentro todas las imagenes/boton de la pagina-->
     <main class="main">
-<<<<<<< HEAD
-      <a href="../index.html">HOME</a>
-    </main>
-    <footer class="footer">1</footer>
-  </body>
-=======
 	<a href="../index.html">
 	<h1 class="h1">HOME</h1>
 	</a>
     </main>
     <footer class="footer">
-        <p>HAMBURGUESA</p>
+        1
+        <p>HOLA</p>
     </footer>
 </body>
->>>>>>> 74ffec8962c904c357882dcc8e16f042ab0a9a83
 </html>
+
