--- a/index.html
+++ b/index.html
@@ -19,6 +19,34 @@
     </nav>
 <!--en el container main encuentro todas las imagenes/boton de la pagina-->
     <main class="main">
+        <div id="i1" class="item1">
+            <a href="./churrascos.html">
+                <img src="./images/churrascoTexto100x100.png"
+                     alt="logoRouster">
+            </a>
+            <a href="./html/hamburguesa.html">
+                <img src="images/hamburguesaTexto.png"
+                     alt="logoRouster">
+            </a>
+        </div>
+        <div id="i2" class="item2">
+            <img src="images/vienesaTexto.png"
+                 alt="logoRouster">
+            <img src="images/selladitosTexto.png"
+                 alt="logoRouster">
+        </div>
+        <div id="i3" class="item3">
+            <img src="images/ensaladasTexto.png"
+                 alt="logoRouster">
+            <img src="images/papasFritasTexto.png"
+                 alt="logoRouster">
+        </div>
+        <div id="i4" class="item4">
+            <img src="images/hamburguesaTexto.png"
+                 alt="logoRouster">
+            <img src="images/paraBeberTexto.png"
+                 alt="logoRouster">
+        </div>
         
         </div>
     </main>
