--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
     <main class="main">
         <div id="i1" class="item1">
             <a href="./churrascos.html">
-                <img src="./images/churrascoTexto100x100.png"
-                     alt="logoRouster">
+                <img src="./images150x150/churrasco150x150.png"
+                     alt="Churrasco 150x150">
             </a>
             <a href="./html/hamburguesa.html">
-                <img src="images/hamburguesaTexto.png"
-                     alt="logoRouster">
+                <img src="images150x150/hamburguesa150x150.png"
+                     alt="Hamburguesa150x150">
             </a>
         </div>
         <div id="i2" class="item2">
-            <img src="images/vienesaTexto.png"
-                 alt="logoRouster">
-            <img src="images/selladitosTexto.png"
-                 alt="logoRouster">
+            <img src="images150x150/vienasa150x150.png"
+                 alt="Vienesa150x150">
+            <img src="images150x150/selladitos150x150.png"
+                 alt="Selladitos150x150">
         </div>
         <div id="i3" class="item3">
-            <img src="images/ensaladasTexto.png"
-                 alt="logoRouster">
-            <img src="images/papasFritasTexto.png"
-                 alt="logoRouster">
+            <img src="images150x150/ensalada150x150.png"
+                 alt="Ensalada150x150">
+            <img src="images150x150/papafrita150x150.png"
+                 alt="Papafrita150x150">
         </div>
         <div id="i4" class="item4">
-            <img src="images/hamburguesaTexto.png"
-                 alt="logoRouster">
-            <img src="images/paraBeberTexto.png"
-                 alt="logoRouster">
+            <img src="images150x150/empanada150x150.png"
+                 alt="Empanada150x150">
+            <img src="images150x150/parabeber150x150.png"
+                 alt="Parabeber150x150">
         </div>
         
         </div>
