--- a/index.html
+++ b/index.html
@@ -20,35 +20,35 @@
 <!--en el container main encuentro todas las imagenes/boton de la pagina-->
     <main class="main">
         <div id="i1" class="item1">
-            <a href="./churrascos.html">
+            <a href="./html/churrasco.html">
                 <img src="./images150x150/churrasco150x150.png"
                      alt="Churrasco 150x150">
             </a>
+        </div>
+        <div class="item2">
             <a href="./html/hamburguesa.html">
                 <img src="images150x150/hamburguesa150x150.png"
                      alt="Hamburguesa150x150">
             </a>
         </div>
-        <div id="i2" class="item2">
+        <!--<div id="i2" class="item">
             <img src="images150x150/vienasa150x150.png"
                  alt="Vienesa150x150">
             <img src="images150x150/selladitos150x150.png"
                  alt="Selladitos150x150">
         </div>
-        <div id="i3" class="item3">
+        <div id="i3" class="item">
             <img src="images150x150/ensalada150x150.png"
                  alt="Ensalada150x150">
             <img src="images150x150/papafrita150x150.png"
                  alt="Papafrita150x150">
         </div>
-        <div id="i4" class="item4">
+        <div id="i4" class="item">
             <img src="images150x150/empanada150x150.png"
                  alt="Empanada150x150">
             <img src="images150x150/parabeber150x150.png"
                  alt="Parabeber150x150">
-        </div>
-        
-        </div>
+        </div>-->
     </main>
     <footer class="footer">
         1
