parece que voy por buen camino todo responsibe y en su sitio

--- a/index.html
+++ b/index.html
@@ -25,30 +25,36 @@
                      alt="Churrasco 150x150">
             </a>
         </div>
-        <div class="item2">
+        <div id="i2" class="item2">
             <a href="./html/hamburguesa.html">
                 <img src="images150x150/hamburguesa150x150.png"
                      alt="Hamburguesa150x150">
             </a>
         </div>
-        <!--<div id="i2" class="item">
+        <div id="i3" class="item3">
             <img src="images150x150/vienasa150x150.png"
                  alt="Vienesa150x150">
+        </div>
+        <div id="i4" class="item4">
             <img src="images150x150/selladitos150x150.png"
                  alt="Selladitos150x150">
         </div>
-        <div id="i3" class="item">
+        <div id="i5" class="item5">
             <img src="images150x150/ensalada150x150.png"
                  alt="Ensalada150x150">
+        </div>
+        <div id="i6" class="item6">
             <img src="images150x150/papafrita150x150.png"
                  alt="Papafrita150x150">
         </div>
-        <div id="i4" class="item">
+        <div id="i4" class="item7">
             <img src="images150x150/empanada150x150.png"
                  alt="Empanada150x150">
+        </div>
+        <div id="i8" class="item8">
             <img src="images150x150/parabeber150x150.png"
                  alt="Parabeber150x150">
-        </div>-->
+        </div>
     </main>
     <footer class="footer">
         1
