por fin logrando que todo calce

--- a/index.html
+++ b/index.html
@@ -32,28 +32,43 @@
             </a>
         </div>
         <div id="i3" class="item3">
+            <a href="./html/vienesa.html">
             <img src="images150x150/vienasa150x150.png"
                  alt="Vienesa150x150">
+            </a>
         </div>
         <div id="i4" class="item4">
-            <img src="images150x150/selladitos150x150.png"
-                 alt="Selladitos150x150">
+            <a href="./html/selladitos.html">
+                <img src="images150x150/selladitos150x150.png"
+                     alt="Selladitos150x150">
+            </a>
         </div>
         <div id="i5" class="item5">
+            <a href="./html/ensalada.html">
             <img src="images150x150/ensalada150x150.png"
                  alt="Ensalada150x150">
+            </a>
         </div>
         <div id="i6" class="item6">
+            <a href="./html/papafrita.html">
             <img src="images150x150/papafrita150x150.png"
                  alt="Papafrita150x150">
+            </a>
+
         </div>
         <div id="i4" class="item7">
+            <a href="./html/empanada.html">
             <img src="images150x150/empanada150x150.png"
                  alt="Empanada150x150">
+            </a>
+
         </div>
         <div id="i8" class="item8">
+            <a href="./html/parabeber.html">
             <img src="images150x150/parabeber150x150.png"
                  alt="Parabeber150x150">
+            </a>
+            
         </div>
     </main>
     <footer class="footer">
