mañana paro con la lista de precios

--- a/html/churrasco.html
+++ b/html/churrasco.html
@@ -15,14 +15,17 @@
         </div>
     </header>
     <nav class="nav">
-        
-        
-    </nav>
-<!--en el container main encuentro todas las imagenes/boton de la pagina-->
-    <main class="main">
+        <main class="main">
 	<a href="../index.html">
 	<h1 class="h1">HOME</h1>
 	</a>
+    </nav>
+<!--en el container main el texto con la lista de precios
+-->
+    <main class="main">
+        <h1>HOLA</h1>
+        <h2>MAÑANA PARTO CON LA LISTA DE ´PRECIOS</h2>
+        <P>Ja Ja Ja</P>
     </main>
     <footer class="footer">
         1
