--- a/html/churrasco.html
+++ b/html/churrasco.html
@@ -15,10 +15,17 @@
         </div>
     </header>
     <nav class="nav">
-        <main class="main">
-	<a href="../index.html">
-	<h1 class="h1">HOME</h1>
-	</a>
+        <div class="home">
+	        <a href="../index.html">
+	        <h3 class="h1">HOME</h3></a>
+        </div>
+        <div class="facebook">
+	        <a href="https://web.facebook.com/profile.php?id=61551407935698&locale=es_LA">
+	        <img src="../imagesSocialMedia/facebook.png"
+                 alt="facebook">
+            </a>
+        </div>
+	    
     </nav>
 <!--en el container main el texto con la lista de precios
 -->
